build: enhance code quality with stricter ESLint rules and comprehensive Prettier config
- Reduce cognitive complexity threshold from 15 to 10 (promotes clean code)
- Reduce function length limit from 80 to 50 lines
- Reduce max parameters from 6 to 4 (SOLID principles)
- Reduce nesting depth from 5 to 3 levels
- Add SonarJS rules for clean code enforcement
- Enhance Prettier configuration with comprehensive formatting options
- Add new quality enforcement rules for maintainable codebase

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,19 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "semi": true,
+  "printWidth": 80,
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "quoteProps": "as-needed",
+  "useTabs": false,
+  "bracketSameLine": false,
+  "embeddedLanguageFormatting": "auto",
+  "proseWrap": "preserve",
+  "htmlWhitespaceSensitivity": "css",
+  "vueIndentScriptAndStyle": false,
+  "insertPragma": false,
+  "requirePragma": false
 }
