--- a/.versionrc.json
+++ b/.versionrc.json
@@ -2,13 +2,22 @@
   "types": [
     { "type": "feat", "section": "Features" },
     { "type": "fix", "section": "Bug Fixes" },
-    { "type": "chore", "hidden": true },
-    { "type": "docs", "hidden": true },
+    { "type": "docs", "section": "Documentation", "hidden": false },
     { "type": "style", "hidden": true },
     { "type": "refactor", "section": "Code Refactoring" },
     { "type": "perf", "section": "Performance Improvements" },
-    { "type": "test", "hidden": true }
+    { "type": "test", "hidden": true },
+    { "type": "build", "section": "Build System" },
+    { "type": "ci", "hidden": true },
+    { "type": "chore", "hidden": true },
+    { "type": "revert", "section": "Reverts" }
   ],
+  "skip": {
+    "changelog": false,
+    "commit": false,
+    "tag": false
+  },
+  "releaseCommitMessageFormat": "chore(release): {{currentTag}}",
   "commitUrlFormat": "{{host}}/{{owner}}/{{repository}}/commit/{{hash}}",
   "compareUrlFormat": "{{host}}/{{owner}}/{{repository}}/compare/{{previousTag}}...{{currentTag}}"
 }
