build(release): enhance commitlint config and add semantic release scripts
- Add comprehensive type and scope enums for conventional commits
- Configure subject, body, and footer length limits
- Enhance commit-msg hook with better error messages
- Add semantic release automation scripts to package.json
- Prepare foundation for automated release management

--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "release:notes": "conventional-changelog -p angular -r 2",
     "release:generate": "./scripts/generate-release-notes.sh",
     "release:full": "npm run test:coverage && npm run analyze && npm run release && npm run release:generate",
+    "release:analyze": "node scripts/release-analyzer.js",
+    "release:auto": "node scripts/auto-release.js",
+    "release:dry-run": "node scripts/release-analyzer.js --dry-run",
+    "release:manual": "node scripts/auto-release.js --force",
     "analyze": "npm run analyze:cognitive && npm run analyze:complexity && npm run analyze:functions",
     "analyze:cognitive": "eslint \"src/**/*.ts\" --format=json | jq -r '.[] | select(.messages[]?.ruleId == \"sonarjs/cognitive-complexity\") | \"📁 \" + .filePath + \"\\n\" + (.messages[] | select(.ruleId == \"sonarjs/cognitive-complexity\") | \"  🧠 Line \" + (.line | tostring) + \": \" + .message)' 2>/dev/null || echo '✅ No cognitive complexity issues found'",
     "analyze:complexity": "eslint \"src/**/*.ts\" --format=json | jq -r '.[] | select(.messages[]?.ruleId == \"complexity\") | \"📁 \" + .filePath + \"\\n\" + (.messages[] | select(.ruleId == \"complexity\") | \"  🔄 Line \" + (.line | tostring) + \": \" + .message)' 2>/dev/null || echo '✅ No cyclomatic complexity issues found'",
@@ -83,6 +87,9 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@testcontainers/postgresql": "^11.5.1",
@@ -96,6 +103,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "conventional-changelog": "^7.1.1",
+    "conventional-commits-parser": "^6.2.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
@@ -107,6 +115,7 @@
     "jscpd": "^3.5.10",
     "lint-staged": "^16.1.2",
     "prettier": "^3.4.2",
+    "semantic-release": "^24.2.8",
     "source-map-support": "^0.5.21",
     "standard-version": "^9.5.0",
     "supertest": "^7.0.0",
