feat(release): implement semantic release analyzer and version calculator
- Add release-analyzer.js with conventional commit parsing
- Add version-calculator.js with semantic versioning support
- Implement intelligent release type detection (major/minor/patch)
- Add comprehensive npm scripts for release automation
- Support JSON output format for integration
- Include dry-run capabilities for safe testing
- Exclude scripts from TypeScript ESLint parsing

--- a/package.json
+++ b/package.json
@@ -38,8 +38,15 @@
     "release:generate": "./scripts/generate-release-notes.sh",
     "release:full": "npm run test:coverage && npm run analyze && npm run release && npm run release:generate",
     "release:analyze": "node scripts/release-analyzer.js",
+    "release:analyze:json": "node scripts/release-analyzer.js --json",
+    "release:analyze:save": "node scripts/release-analyzer.js --save",
+    "release:version": "node scripts/version-calculator.js",
+    "release:version:minor": "node scripts/version-calculator.js minor --dry-run",
+    "release:version:patch": "node scripts/version-calculator.js patch --dry-run",
+    "release:version:major": "node scripts/version-calculator.js major --dry-run",
+    "release:version:prerelease": "node scripts/version-calculator.js prerelease --dry-run",
     "release:auto": "node scripts/auto-release.js",
-    "release:dry-run": "node scripts/release-analyzer.js --dry-run",
+    "release:dry-run": "node scripts/release-analyzer.js --json | jq -r '.analysis.needsRelease' && echo 'Would perform release' || echo 'No release needed'",
     "release:manual": "node scripts/auto-release.js --force",
     "analyze": "npm run analyze:cognitive && npm run analyze:complexity && npm run analyze:functions",
     "analyze:cognitive": "eslint \"src/**/*.ts\" --format=json | jq -r '.[] | select(.messages[]?.ruleId == \"sonarjs/cognitive-complexity\") | \"📁 \" + .filePath + \"\\n\" + (.messages[] | select(.ruleId == \"sonarjs/cognitive-complexity\") | \"  🧠 Line \" + (.line | tostring) + \": \" + .message)' 2>/dev/null || echo '✅ No cognitive complexity issues found'",
