feat(release): implement pre-push release hook and auto-release script
- Enhance .husky/pre-push with automated release detection
- Add interactive release confirmation for developers
- Create scripts/auto-release.js with comprehensive release automation
- Implement rollback mechanisms and error handling
- Add backup/restore functionality for safe releases
- Support dry-run mode for testing
- Update npm scripts for seamless release workflow
- Include CI/CD environment detection

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "release:version:major": "node scripts/version-calculator.js major --dry-run",
     "release:version:prerelease": "node scripts/version-calculator.js prerelease --dry-run",
     "release:auto": "node scripts/auto-release.js",
-    "release:dry-run": "node scripts/release-analyzer.js --json | jq -r '.analysis.needsRelease' && echo 'Would perform release' || echo 'No release needed'",
+    "release:auto:dry-run": "node scripts/auto-release.js --dry-run",
+    "release:auto:force": "node scripts/auto-release.js --force",
+    "release:dry-run": "node scripts/auto-release.js --dry-run",
     "release:manual": "node scripts/auto-release.js --force",
     "analyze": "npm run analyze:cognitive && npm run analyze:complexity && npm run analyze:functions",
     "analyze:cognitive": "eslint \"src/**/*.ts\" --format=json | jq -r '.[] | select(.messages[]?.ruleId == \"sonarjs/cognitive-complexity\") | \"📁 \" + .filePath + \"\\n\" + (.messages[] | select(.ruleId == \"sonarjs/cognitive-complexity\") | \"  🧠 Line \" + (.line | tostring) + \": \" + .message)' 2>/dev/null || echo '✅ No cognitive complexity issues found'",
