--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "format:fix": "npm run format && npm run lint:fix",
     "lint:fix": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix",
     "quality": "npm run format:check && npm run lint && npm run analyze",
-    "quality:fix": "npm run format:fix && npm run analyze"
+    "quality:fix": "npm run format:fix && npm run analyze",
+    "env:check": "node scripts/env-check.js",
+    "env:check:ci": "node scripts/env-check.js --ci",
+    "env:validate": "npm run env:check && echo '✅ Environment validated for development'"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
