feat(security): enhance release system with comprehensive safety checks
- Add branch verification in auto-release.js with multi-layer protection
- Fix coverage thresholds in package.json (remove bypass mechanism)
- Add working directory cleanliness check before releases
- Add remote synchronization verification for safety
- Improve error handling for different skip scenarios
- Update documentation with new security requirements

These changes ensure releases are only performed under safe conditions:
- Only from main/master branch (double verification)
- Only with clean working directory (no uncommitted changes)
- Only when synchronized with remote (prevents conflicts)
- Coverage thresholds properly enforced (quality gates)

BREAKING CHANGE: Coverage thresholds now actively enforced - may break existing CI/CD if coverage is below thresholds

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:coverage": "jest --coverage --passWithNoTests",
-    "test:coverage:check": "jest --coverage --passWithNoTests --coverageThreshold='{}' --silent",
+    "test:coverage:check": "jest --coverage --passWithNoTests --silent",
     "test:coverage:open": "jest --coverage && open coverage/lcov-report/index.html",
     "test:coverage:ci": "jest --coverage --watchAll=false --ci --reporters=default --reporters=jest-junit",
     "test:tdd": "jest --watch --coverage --verbose",
