--- a/package.json
+++ b/package.json
@@ -22,7 +22,16 @@
     "test:coverage:ci": "jest --coverage --watchAll=false --ci --reporters=default --reporters=jest-junit",
     "test:tdd": "jest --watch --coverage --verbose",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./jest.e2e.config.js",
+    "test:e2e:watch": "jest --config ./jest.e2e.config.js --watch",
+    "test:integration": "jest --config ./jest.integration.config.js",
+    "test:integration:watch": "jest --config ./jest.integration.config.js --watch",
+    "test:integration:cov": "jest --config ./jest.integration.config.js --coverage",
+    "test:integration:safe": "./scripts/ensure-database.sh && npm run test:integration",
+    "test:e2e:safe": "./scripts/ensure-database.sh && npm run test:e2e",
+    "test:safe": "./scripts/test-env-guard.sh all",
+    "test:integration:guard": "./scripts/test-env-guard.sh integration",
+    "test:e2e:guard": "./scripts/test-env-guard.sh e2e",
     "test:integration:e2e": "jest --config ./test/jest-integration.json",
     "test:integration:e2e:watch": "jest --config ./test/jest-integration.json --watch",
     "test:integration:e2e:cov": "jest --config ./test/jest-integration.json --coverage",
@@ -66,7 +75,12 @@
     "quality:fix": "npm run format:fix && npm run analyze",
     "env:check": "node scripts/env-check.js",
     "env:check:ci": "node scripts/env-check.js --ci",
-    "env:validate": "npm run env:check && echo '✅ Environment validated for development'"
+    "env:validate": "npm run env:check && echo '✅ Environment validated for development'",
+    "db:ensure": "./scripts/ensure-database.sh",
+    "db:start": "docker compose up -d todo-database",
+    "db:stop": "docker compose stop todo-database",
+    "db:restart": "docker compose restart todo-database",
+    "db:status": "docker compose ps todo-database"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
