feat(release): align all release scripts to auto-release system
- Replace standard-version with auto-release.js for all release commands
- Add explicit type parameters (--type="auto"|"minor"|"major"|"patch")
- Add force variants for overriding safety checks
- Maintain backward compatibility while using unified release system
- All scripts now benefit from version consistency validation

BREAKING CHANGE: release scripts now use auto-release system instead of standard-version

--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "prepare": "husky",
     "pre-commit": "lint-staged",
     "pre-push": "npm run test && npm run build",
-    "release": "standard-version",
-    "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major",
-    "release:patch": "standard-version --release-as patch",
-    "release:dry": "standard-version --dry-run",
+    "release": "node scripts/auto-release.js --type=\"auto\"",
+    "release:minor": "node scripts/auto-release.js --type=\"minor\"",
+    "release:major": "node scripts/auto-release.js --type=\"major\"",
+    "release:patch": "node scripts/auto-release.js --type=\"patch\"",
+    "release:dry": "node scripts/auto-release.js --type=\"auto\" --dry-run",
     "release:notes": "conventional-changelog -p angular -r 2",
     "release:generate": "./scripts/generate-release-notes.sh",
     "release:full": "npm run test:coverage && npm run analyze && npm run release && npm run release:generate",
@@ -50,15 +50,18 @@
     "release:analyze:json": "node scripts/release-analyzer.js --json",
     "release:analyze:save": "node scripts/release-analyzer.js --save",
     "release:version": "node scripts/version-calculator.js",
-    "release:version:minor": "node scripts/version-calculator.js minor --dry-run",
-    "release:version:patch": "node scripts/version-calculator.js patch --dry-run",
-    "release:version:major": "node scripts/version-calculator.js major --dry-run",
+    "release:version:minor": "node scripts/auto-release.js --type=\"minor\" --dry-run",
+    "release:version:patch": "node scripts/auto-release.js --type=\"patch\" --dry-run",
+    "release:version:major": "node scripts/auto-release.js --type=\"major\" --dry-run",
     "release:version:prerelease": "node scripts/version-calculator.js prerelease --dry-run",
-    "release:auto": "node scripts/auto-release.js",
-    "release:auto:dry-run": "node scripts/auto-release.js --dry-run",
-    "release:auto:force": "node scripts/auto-release.js --force",
-    "release:dry-run": "node scripts/auto-release.js --dry-run",
-    "release:manual": "node scripts/auto-release.js --force",
+    "release:auto": "node scripts/auto-release.js --type=\"auto\"",
+    "release:auto:dry-run": "node scripts/auto-release.js --type=\"auto\" --dry-run",
+    "release:auto:force": "node scripts/auto-release.js --type=\"auto\" --force",
+    "release:dry-run": "node scripts/auto-release.js --type=\"auto\" --dry-run",
+    "release:manual": "node scripts/auto-release.js --type=\"auto\" --force",
+    "release:force:minor": "node scripts/auto-release.js --type=\"minor\" --force",
+    "release:force:major": "node scripts/auto-release.js --type=\"major\" --force",
+    "release:force:patch": "node scripts/auto-release.js --type=\"patch\" --force",
     "analyze": "npm run analyze:cognitive && npm run analyze:complexity && npm run analyze:functions",
     "analyze:cognitive": "eslint \"src/**/*.ts\" --format=json | jq -r '.[] | select(.messages[]?.ruleId == \"sonarjs/cognitive-complexity\") | \"📁 \" + .filePath + \"\\n\" + (.messages[] | select(.ruleId == \"sonarjs/cognitive-complexity\") | \"  🧠 Line \" + (.line | tostring) + \": \" + .message)' 2>/dev/null || echo '✅ No cognitive complexity issues found'",
     "analyze:complexity": "eslint \"src/**/*.ts\" --format=json | jq -r '.[] | select(.messages[]?.ruleId == \"complexity\") | \"📁 \" + .filePath + \"\\n\" + (.messages[] | select(.ruleId == \"complexity\") | \"  🔄 Line \" + (.line | tostring) + \": \" + .message)' 2>/dev/null || echo '✅ No cyclomatic complexity issues found'",
