--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "release:major": "node scripts/auto-release.js --type=\"major\"",
     "release:patch": "node scripts/auto-release.js --type=\"patch\"",
     "release:dry": "node scripts/auto-release.js --type=\"auto\" --dry-run",
-    "release:notes": "conventional-changelog -p angular -r 2",
+    "release:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2",
+    "release:notes": "conventional-changelog -p angular -i RELEASE_NOTES.md -s -r 1 --pkg",
     "release:generate": "./scripts/generate-release-notes.sh",
     "release:full": "npm run test:coverage && npm run analyze && npm run release && npm run release:generate",
     "release:analyze": "node scripts/release-analyzer.js",
@@ -132,6 +133,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "conventional-changelog": "^7.1.1",
+    "conventional-changelog-cli": "^5.0.0",
     "conventional-commits-parser": "^6.2.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
