--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "conventional-changelog": "^7.1.1",
     "conventional-changelog-cli": "^5.0.0",
     "conventional-commits-parser": "^6.2.0",
+    "dotenv": "^17.2.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
